fix issue where image and shadow size were not aligning properly due to shadow size being positioned incorrectly against the encompasing column instead of the encompasing div #8

--- a/css/styles.css
+++ b/css/styles.css
@@ -488,13 +488,17 @@ i:active {
   text-align: center;
 }
 
+.month-container {
+  padding: 0.5rem 0.25rem;
+}
+
 .fish-shadow-card {
   position: relative;
   display: flex;
   flex-basis: 25%;
   min-width: 80px;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding-bottom: 0.5rem;
   padding-top: 0.25rem;
@@ -521,8 +525,8 @@ i:active {
 }
 
 .fish-size-img {
-  width: 100%;
-  max-width: 70px;
+  width: 90%;
+  max-width: 79px;
   border-radius: 8px;
 }
 
@@ -531,8 +535,8 @@ i:active {
   color: black;
   width: 27px;
   height: 27px;
-  left: -1px;
-  top: -5px;
+  left: 62px;
+  top: -11px;
   background-color: white;
   border: 2px solid #0092e3;
   border-radius: 50%;
@@ -664,6 +668,10 @@ i:active {
 
 .gap-3-rem {
   gap: 3rem;
+}
+
+.position-relative {
+  position: relative;
 }
 
 .light-gray-bg {
